# static-sysvars

./: BENCHMARK.md  BENCHMARKS.md  Cargo.toml  Readme.md
crates/static-syscalls/: Cargo.toml
crates/static-syscalls/src/: clock.rs  hash.rs  lib.rs  rent.rs
test-baseline/: Cargo.toml
test-baseline/src/: lib.rs
test-static-sysvars/: Cargo.toml
test-static-sysvars/src/: lib.rs
test-syscall/: Cargo.toml
test-syscall/src/: lib.rs
test-sysvar-account/: Cargo.toml
test-sysvar-account-checked/: Cargo.toml
test-sysvar-account-checked/src/: lib.rs
test-sysvar-account/src/: lib.rs
tests/: bench_all.rs  tests.rs
